[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/characters/NPC/individual sprites/villager_02/villager_02_03.png" type="Texture" id=1]
[ext_resource path="res://assets/characters/NPC/individual sprites/villager_02/villager_02_01.png" type="Texture" id=2]
[ext_resource path="res://assets/characters/NPC/individual sprites/villager_02/villager_02_00.png" type="Texture" id=3]
[ext_resource path="res://assets/characters/NPC/individual sprites/villager_02/villager_02_02.png" type="Texture" id=4]
[ext_resource path="res://assets/characters/NPC/individual sprites/villager_02/villager_02_04.png" type="Texture" id=5]
[ext_resource path="res://scripts/npc/drunk_man_npc.gd" type="Script" id=6]

[sub_resource type="CapsuleShape2D" id=1]
radius = 11.0
height = 8.0

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 2 ), ExtResource( 4 ), ExtResource( 1 ), ExtResource( 5 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
} ]

[node name="drunk_man_npc" type="Area2D"]
script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "idle"
frame = 2
playing = true

[connection signal="body_entered" from="." to="." method="_on_drunk_man_npc_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_drunk_man_npc_body_exited"]
